[gd_scene load_steps=47 format=3 uid="uid://b1ex25kxjgjvv"]

[ext_resource type="Script" path="res://script/Pola.gd" id="1_b8brp"]
[ext_resource type="Texture2D" uid="uid://bl8bnfeqo3klv" path="res://Sprites/Pola/MergedPola.png" id="2_jgajm"]
[ext_resource type="Texture2D" uid="uid://cy4t8ooix1to7" path="res://Sprites/Entidades/EnemyDeathEffect.png" id="3_tjiog"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kvssx"]
atlas = ExtResource("2_jgajm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_frcap"]
atlas = ExtResource("2_jgajm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmeij"]
atlas = ExtResource("2_jgajm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej0r1"]
atlas = ExtResource("2_jgajm")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6r6v"]
atlas = ExtResource("2_jgajm")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oykjt"]
atlas = ExtResource("2_jgajm")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1sq2"]
atlas = ExtResource("2_jgajm")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8oec"]
atlas = ExtResource("2_jgajm")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgyvu"]
atlas = ExtResource("2_jgajm")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l0fd"]
atlas = ExtResource("2_jgajm")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5x6h"]
atlas = ExtResource("3_tjiog")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtlmx"]
atlas = ExtResource("3_tjiog")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg3mm"]
atlas = ExtResource("3_tjiog")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwp8v"]
atlas = ExtResource("3_tjiog")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd2rq"]
atlas = ExtResource("3_tjiog")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0nac"]
atlas = ExtResource("3_tjiog")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmd35"]
atlas = ExtResource("3_tjiog")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_41cu2"]
atlas = ExtResource("3_tjiog")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_li0gm"]
atlas = ExtResource("3_tjiog")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c04sy"]
atlas = ExtResource("3_tjiog")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1tuj"]
atlas = ExtResource("2_jgajm")
region = Rect2(800, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_470x6"]
atlas = ExtResource("2_jgajm")
region = Rect2(832, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnkmq"]
atlas = ExtResource("2_jgajm")
region = Rect2(864, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xp5x"]
atlas = ExtResource("2_jgajm")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr0og"]
atlas = ExtResource("2_jgajm")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2pw2"]
atlas = ExtResource("2_jgajm")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6evk"]
atlas = ExtResource("2_jgajm")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bxry"]
atlas = ExtResource("2_jgajm")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sllu"]
atlas = ExtResource("2_jgajm")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n12cf"]
atlas = ExtResource("2_jgajm")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uri7y"]
atlas = ExtResource("2_jgajm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ig66"]
atlas = ExtResource("2_jgajm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e10fi"]
atlas = ExtResource("2_jgajm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc6bk"]
atlas = ExtResource("2_jgajm")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwry0"]
atlas = ExtResource("2_jgajm")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qck7q"]
atlas = ExtResource("2_jgajm")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iw2o"]
atlas = ExtResource("2_jgajm")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7uml"]
atlas = ExtResource("2_jgajm")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru28o"]
atlas = ExtResource("2_jgajm")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8inr"]
atlas = ExtResource("2_jgajm")
region = Rect2(640, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ceajv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvssx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frcap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmeij")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej0r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6r6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oykjt")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1sq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8oec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgyvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l0fd")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5x6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtlmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg3mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwp8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd2rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0nac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmd35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41cu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li0gm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c04sy")
}],
"loop": true,
"name": &"death",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1tuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_470x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnkmq")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xp5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr0og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2pw2")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6evk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bxry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sllu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n12cf")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uri7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ig66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e10fi")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc6bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwry0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qck7q")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iw2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7uml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru28o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8inr")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hfxc"]
size = Vector2(15, 8)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5yf5w"]
radius = 11.0

[node name="Pola" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_b8brp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ceajv")
animation = &"front_walk"
frame_progress = 0.378953
offset = Vector2(0, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_3hfxc")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_5yf5w")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
